# Polymarket-Trading-Bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/commands/: research.md
.claude/skills/research/: skill.md
src/actors/: weather_forecast_ingestor_actor.py  weather_state_actor.py
src/actors/weather/: data_collector_actor.py  forecast_ingestor_actor.py  observation_ingestor_actor.py  predictor_actor.py  predictor_calibrator_actor.py  state_actor.py
src/calibrator/weather/: emos_calibrator.py
src/core/: enums.py  settings.py
src/core/enums/weather/: __init__.py  endpoints.py  quantifier.py  units.py
src/database/: weather_adapter.py
src/enums/common/: __init__.py  status.py
src/enums/weather/: __init__.py  endpoints.py  timers.py
src/models/: pricing_mode.py  weather_model.py
src/models/common/: __init__.py  pricing.py  pricing_mode.py
src/models/weather/: __init__.py  calibration.py  components.py  events.py  manifest.py
src/oracle/: weather_ensemble.py  weather_metar.py
src/oracle/weather/: __init__.py  ensemble.py  iem.py  metar.py
src/parsers/: weather.py  weather_parser.py
src/predictors/: weather_predictor.py
src/predictors/engine/: idr.py  kde.py
src/settings/: __init__.py
src/settings/common/: database.py  main.py  node.py
src/settings/weather/: calibrator.py  collector.py  oracle.py  slug_builder.py  trainer.py
src/strategies/: weather_strategy.py
src/utils/: path_builder.py  slug_builder.py  statistics.py  temperature_converter.py
