[project]
name = "capybara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "airportsdata>=20260315",
    "nautilus-trader[polymarket]>=1.226.0",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "retry-requests>=2.0.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
]
